# raqiya-bible-reference

./: .gitignore  Cargo.toml  README.md
scripts/: deploy_local_release.py
src/: bible.rs  bible_ref_parse.rs  books.rs  convert.rs  lib.rs  main.rs
