[package]
name = "raqiya-bible-reference"
authors = ["Raqiya"]
description = "Parsing and conversion for Bible references"
edition = "2021"
keywords = ["bible", "conversion", "passage", "parsing", "reference"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Henri-Mikael-Korpela/raqiya-bible-reference"
version = "0.1.3"

[[bin]]
name = "bible_ref_parse"
path = "src/bible_ref_parse.rs"

[lib]
name = "raqiya_bible_reference"
path = "src/lib.rs"

[dependencies]
